<?xml version="1.0" encoding="utf-8"?>
<!-- Note: ScrollView can only contain a single child element -->
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.example.udacity.populermoviesapp.DetailsActivity">
        <!-- below to do is note to myself -->
        <!-- TODO for margin or padding create/use dimension xml instead of hardcoded values!-->
        <TextView
            android:id="@+id/original_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/textview_label"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/poster_image_tv"
            android:layout_width="185dp"
            android:layout_height="278dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/image_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/original_title_label"
            app:srcCompat="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/vote_avarage_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/vote_avarage_label"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_image_tv"
            app:layout_constraintTop_toTopOf="@+id/poster_image_tv" />

        <TextView
            android:id="@+id/vote_avarage_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/textview_tv"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/vote_avarage_label"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="@+id/vote_avarage_label"
            app:layout_constraintTop_toBottomOf="@+id/vote_avarage_label" />

        <TextView
            android:id="@+id/release_date_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="60dp"
            android:text="@string/release_date_label"
            android:textSize="15sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_image_tv"
            app:layout_constraintTop_toBottomOf="@+id/vote_avarage_tv" />

        <TextView
            android:id="@+id/release_date_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:text="@string/textview_tv"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/release_date_label"
            app:layout_constraintStart_toStartOf="@+id/release_date_label"
            app:layout_constraintTop_toBottomOf="@+id/release_date_label" />

        <TextView
            android:id="@+id/overview_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:text="@string/textview_tv"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_image_tv" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>